Fix for top border of content link not visible on first row of chat message

--- a/less/dragonbane.less
+++ b/less/dragonbane.less
@@ -755,6 +755,9 @@
         .result-image {
             border: 0px transparent;
         }
+        .message-content {
+            padding-top: 1px;
+        }
         label.checkbox {
             display: flex;
             gap: 0.25rem;
